--- a/style.css
+++ b/style.css
@@ -2169,10 +2169,11 @@ a.phone-button:focus,
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 16px !important;
 }
 .footer-menu .footer-menu-list li {
   margin: 0;
+  padding: 0;
 }
 .footer-menu .footer-menu-list a {
   font-family: "Manrope", "Visby CF", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -2327,10 +2328,11 @@ a.phone-button:focus,
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 16px !important;
 }
 .footer-services-list li {
   margin: 0;
+  padding: 0;
 }
 .footer-services-list a {
   font-family: "Manrope", "Visby CF", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
